--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/test/scala"/>
-	<classpathentry kind="src" path="src/main/scala"/>
-	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk8"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="src" path="src\main\scala"/>
+  <classpathentry kind="src" path="src\main\java"/>
+  <classpathentry kind="src" path="src\main\resources"/>
+  <classpathentry kind="src" path="src\test\scala"/>
+  <classpathentry kind="src" path="src\test\java"/>
+  <classpathentry kind="src" path="src\test\resources"/>
+  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-http-experimental_2.11\jars\akka-http-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-http-core-experimental_2.11\jars\akka-http-core-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-parsing-experimental_2.11\jars\akka-parsing-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-stream-experimental_2.11\jars\akka-stream-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-actor_2.11\jars\akka-actor_2.11-2.3.12.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe\config\bundles\config-1.2.1.jar"/>
+  <classpathentry kind="lib" path="D:\opensource\scala\typesafe-activator-1.3.7\repository\org.reactivestreams\reactive-streams\1.0.0\jars\reactive-streams.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-http-spray-json-experimental_2.11\jars\akka-http-spray-json-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.spray\spray-json_2.11\bundles\spray-json_2.11-1.3.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-http-testkit-experimental_2.11\jars\akka-http-testkit-experimental_2.11-1.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-testkit_2.11\jars\akka-testkit_2.11-2.3.12.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.scalatest\scalatest_2.11\bundles\scalatest_2.11-2.2.5.jar"/>
+  <classpathentry kind="lib" path="D:\opensource\scala\typesafe-activator-1.3.7\repository\org.scala-lang.modules\scala-xml_2.11\1.0.2\bundles\scala-xml_2.11.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="output" path="bin"/>
 </classpath>
