--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,18 @@
+###########################################
+# Project Reference Configuration File	  #
+###########################################
+
+# This is the reference configuration file that contains all the default settings.
+# Make your edits/overrides in your application.conf.
+
 akka {
   loglevel = DEBUG
 }
 
-http {
-  interface = "0.0.0.0"
-  port = 9000
+inbravo.can {
+
+	server {
+	  interface = "0.0.0.0"
+	  port = 9000
+	}
 }
