--- a/.classpath
+++ b/.classpath
@@ -46,7 +46,6 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.hadoop\hadoop-client\jars\hadoop-client-2.2.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.hadoop\hadoop-common\jars\hadoop-common-2.2.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.hadoop\hadoop-annotations\jars\hadoop-annotations-2.2.0.jar"/>
-  <classpathentry kind="lib" path="D:\opensource\typesafe-activator\repository\com.google.code.findbugs\jsr305\1.3.9\jars\jsr305.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\commons-cli\commons-cli\jars\commons-cli-1.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.commons\commons-math\jars\commons-math-2.1.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\xmlenc\xmlenc\jars\xmlenc-0.52.jar"/>
@@ -84,9 +83,6 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.spark\spark-network-common_2.11\jars\spark-network-common_2.11-2.0.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-all\jars\netty-all-4.0.29.Final.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.fusesource.leveldbjni\leveldbjni-all\bundles\leveldbjni-all-1.8.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-databind\bundles\jackson-databind-2.6.5.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-annotations\bundles\jackson-annotations-2.6.5.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-core\bundles\jackson-core-2.6.5.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.spark\spark-network-shuffle_2.11\jars\spark-network-shuffle_2.11-2.0.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.spark\spark-unsafe_2.11\jars\spark-unsafe_2.11-2.0.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\net.java.dev.jets3t\jets3t\jars\jets3t-0.7.1.jar"/>
@@ -94,7 +90,6 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.curator\curator-framework\bundles\curator-framework-2.4.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.curator\curator-client\bundles\curator-client-2.4.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.zookeeper\zookeeper\jars\zookeeper-3.4.5.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.google.guava\guava\bundles\guava-14.0.1.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\javax.servlet\javax.servlet-api\jars\javax.servlet-api-3.1.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.commons\commons-lang3\jars\commons-lang3-3.3.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.commons\commons-math3\jars\commons-math3-3.4.1.jar"/>
@@ -106,7 +101,6 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.json4s\json4s-jackson_2.11\jars\json4s-jackson_2.11-3.2.11.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.json4s\json4s-core_2.11\jars\json4s-core_2.11-3.2.11.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.json4s\json4s-ast_2.11\jars\json4s-ast_2.11-3.2.11.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.thoughtworks.paranamer\paranamer\jars\paranamer-2.6.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.scala-lang\scalap\jars\scalap-2.11.0.jar"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.glassfish.jersey.core\jersey-client\jars\jersey-client-2.22.2.jar"/>
@@ -132,8 +126,6 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.dropwizard.metrics\metrics-jvm\bundles\metrics-jvm-3.1.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.dropwizard.metrics\metrics-json\bundles\metrics-json-3.1.2.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.dropwizard.metrics\metrics-graphite\bundles\metrics-graphite-3.1.2.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.module\jackson-module-scala_2.11\bundles\jackson-module-scala_2.11-2.6.5.jar"/>
-  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.module\jackson-module-paranamer\bundles\jackson-module-paranamer-2.6.5.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\org.apache.ivy\ivy\jars\ivy-2.4.0.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\oro\oro\jars\oro-2.0.8.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\net.razorvine\pyrolite\jars\pyrolite-4.13.jar"/>
@@ -224,6 +216,43 @@
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.nimbusds\nimbus-jose-jwt\jars\nimbus-jose-jwt-3.1.2.jar"/>
   <classpathentry kind="lib" path="D:\opensource\typesafe-activator\repository\org.bouncycastle\bcprov-jdk15on\1.51\jars\bcprov-jdk15on.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.google.code.gson\gson\jars\gson-2.2.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-http_2.11\jars\finagle-http_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-base-http_2.11\jars\finagle-base-http_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-core_2.11\jars\finagle-core_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-toggle_2.11\jars\finagle-toggle_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-app_2.11\jars\util-app_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-core_2.11\jars\util-core_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-function_2.11\jars\util-function_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-registry_2.11\jars\util-registry_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.google.guava\guava\bundles\guava-16.0.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-logging_2.11\jars\util-logging_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-stats_2.11\jars\util-stats_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-lint_2.11\jars\util-lint_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.github.ben-manes.caffeine\caffeine\jars\caffeine-2.3.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.google.code.findbugs\jsr305\jars\jsr305-2.0.1.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-core\bundles\jackson-core-2.8.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-databind\bundles\jackson-databind-2.8.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.module\jackson-module-scala_2.11\bundles\jackson-module-scala_2.11-2.8.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.core\jackson-annotations\bundles\jackson-annotations-2.8.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.fasterxml.jackson.module\jackson-module-paranamer\bundles\jackson-module-paranamer-2.8.4.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.thoughtworks.paranamer\paranamer\bundles\paranamer-2.8.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-cache_2.11\jars\util-cache_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-codec_2.11\jars\util-codec_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-hashing_2.11\jars\util-hashing_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-jvm_2.11\jars\util-jvm_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-security_2.11\jars\util-security_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\util-collection_2.11\jars\util-collection_2.11-6.41.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-netty4-http_2.11\jars\finagle-netty4-http_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.twitter\finagle-netty4_2.11\jars\finagle-netty4_2.11-6.42.0.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-codec-http\jars\netty-codec-http-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-codec\jars\netty-codec-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-transport\jars\netty-transport-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-buffer\jars\netty-buffer-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-common\jars\netty-common-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-resolver\jars\netty-resolver-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-handler\jars\netty-handler-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-handler-proxy\jars\netty-handler-proxy-4.1.8.Final.jar"/>
+  <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\io.netty\netty-codec-socks\jars\netty-codec-socks-4.1.8.Final.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-http-testkit_2.11\jars\akka-http-testkit_2.11-2.4.6.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-stream-testkit_2.11\jars\akka-stream-testkit_2.11-2.4.6.jar"/>
   <classpathentry kind="lib" path="C:\Users\amit.dixit\.ivy2\cache\com.typesafe.akka\akka-testkit_2.11\jars\akka-testkit_2.11-2.4.6.jar"/>
