--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.inbreavo</groupId>
+    <groupId>com.inbravo</groupId>
     <version>0.1-SNAPSHOT</version>
     <artifactId>scala-feature-set</artifactId>
-
     <packaging>jar</packaging>
 
     <properties>
@@ -18,12 +16,12 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang -->
         <dependency>
             <artifactId>scala-library</artifactId>
             <groupId>org.scala-lang</groupId>
             <version>${scala.version}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -37,14 +35,13 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- logs -->
+        <!-- https://mvnrepository.com/artifact/org.slf4j.api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.2</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.slf4j-log4j12 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
